--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3>Crypto API</h3>
             <p class="lngp">JavaScript</p>
             <p>This uses the Coincap API 2.0 to see the prices and price change of 100 crypto currencies.</p>
-            <a href="https://jakedavis.uk/CryptoAPI/CryptoAPI.html"><div class="btn btn1">Continue</div></a>
+            <a href="/CryptoAPI/CryptoAPI.html"><div class="btn btn1">Continue</div></a>
         </div>
 
         <div class="projectbox">
@@ -74,14 +74,14 @@
             <h3 class="prjTitle">Memory Game</h3>
             <p class="lngp">JavaScript Python</p>
             <p>I'm sure you have played a game like this before, but here is a game where you click all the flashing in the correct sequence. Please check my Github for the Python version of this game.</p>
-            <a href="https://jakedavis.uk/mem_game_JS/mem_game_JS.html"><div class="btn btn1">Continue</div></a>
+            <a href="/mem_game_JS/mem_game_JS.html"><div class="btn btn1">Continue</div></a>
         </div>
         
         <div class="projectbox">
             <h3>Alarm</h3>
             <p class="lngp">JavaScript</p>
             <p>A simple alarm made in JavaScript.<br>Choose the time you want and click "Set alarm"<br>The alarm is very loud so please keep that in mind.</p>
-            <a href="https://jakedavis.uk/Alarm/index.html"><div class="btn btn1">Continue</div></a>
+            <a href="/Alarm/index.html"><div class="btn btn1">Continue</div></a>
         </div>
 
         <div class="projectbox">
@@ -95,7 +95,7 @@
             <h3>Pong Game</h3>
             <p class="lngp">Python</p>
             <p>A Python game made using pygame. The first to 5 points wins. Please see the README file on github for the controls. </p>
-            <a href="https://jakedavis.uk/Pong/pong.html"><div class="btn btn1">Continue</div></a>
+            <a href="/Pong/pong.html"><div class="btn btn1">Continue</div></a>
         </div>
         
         <div class="projectbox">
@@ -109,21 +109,21 @@
             <h3>Colour Generator</h3>
             <p class="lngp">JavaScript</p>
             <p>A simple webpage that changes the colour of the page to a random hexadecimal value.</p>
-            <a href="https://jakedavis.uk/Hex_Colour/Colour_Changes.html"><div class="btn btn1">Continue</div></a>
+            <a href="/Hex_Colour/Colour_Changes.html"><div class="btn btn1">Continue</div></a>
         </div>
 
         <div class="projectbox">
             <h3>Python Calculator</h3>
             <p class="lngp">Python</p>
             <p>A simple calculator using tkinter. It includes the following operations:<br> Add, Subtract, Divide, Multiply, Modulo, X² and Xⁿ.</p>
-            <a href="https://jakedavis.uk/calculator/calculator.html"><div class="btn btn1">Continue</div></a>
+            <a href="/calculator/calculator.html"><div class="btn btn1">Continue</div></a>
         </div>
 
         <div class="projectbox">
             <h3>IMDB Database Manipulation</h3>
             <p class="lngp">Python sqlite</p>
             <p>A database of the top 250 shows on IMDB. Here you can read, add, update and delete this table through the Python prompts</p>
-            <a href="https://jakedavis.uk/IMDB/imdb.html"><div class="btn btn1">Continue</div></a>
+            <a href="/IMDB/imdb.html"><div class="btn btn1">Continue</div></a>
         </div>
 
     </main>
