--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-    <title>Jake - Software Developer</title>
+    <title>Jake Davis - Software Developer</title>
 </head>
 <body>
     <div id="trailer">
